# waydroid-upgrade

./: README.md  pyproject.toml  waydroid_upgrade.py
src/waydroid_upgrade/: __init__.py
src/waydroid_upgrade/tools/: __init__.py  config.py
tools/: __init__.py  config.py
