[project]
name = "waydroid-upgrade"
version = "0.1.0"
description = "Check for upgrades for Waydroid images without restarting the sessions"
readme = "README.md"
authors = [
    { name = "Jisu-Woniu", email = "31986081+Jisu-Woniu@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = ["aiohttp>=3.11.12"]
license = "GPL-3.0-or-later"

[project.scripts]
waydroid-upgrade = "waydroid_upgrade:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.uv.venv]
# system-site-packages = true

[tool.ruff.lint]
select = ["D", "E4", "E7", "E9", "F", "W"]
ignore = [
    "D203", # incorrect-blank-line-before-class
    "D212", # multi-line-summary-first-line
]
